# GraphSense

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  railway.toml
backend/: .env.example  Dockerfile  README.md  migrate.py  pyproject.toml  railway.toml
backend/migrations/: README.md
backend/migrations/schema/: V20260325000001__baseline_consolidated.sql  V20260326000001__add_rag_embeddings_pgvector.sql
backend/src/: main.py
backend/src/ai/: chat.py  config.py  data_profiling.py  embeddings.py  guardrails.py  retrieval.py  schema_ingestion.py  training.py
backend/src/api/: chat.py  graph.py  ingest.py
backend/src/db/: __init__.py  base.py  config.py  engine.py  migration_runner.py  models.py  session.py
backend/src/domain/: flow_definitions.py  graph_models.py
backend/src/ingestion/: cli.py  jsonl_loader.py  schemas.py
backend/src/repositories/: graph_repository.py
backend/src/utils/: logger.py
data modelling/: data_analysis.py  ddl.sql  eda.md  model.ipynb  relationship.py
docs/: architecture.md  ingestion_task.md  sap_o2c_schemas.md  solution.md  solution_v2.md  task.md  vanna_arch.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.d.ts
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/components/flows/: FlowExplorer.tsx  FlowSelector.tsx
frontend/src/components/graph/: GraphExplorer.tsx  (+1 more)
frontend/src/constants/: graph.ts
frontend/src/services/: api.ts
frontend/src/store/: useGraphStore.ts
frontend/src/types/: graph.ts
(+5 files in other folders)
