[project]
name = "dodgeai-backend"
version = "0.1.0"
description = "FastAPI backend for DodgeAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "duckdb>=0.10.1",
    "pgvector>=0.2.5",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]
